@@ -13,7 +13,7 @@ my $build = Module::Build->new(
     module_name        => 'Bio::SamTools',
     dist_version_from  => 'lib/Bio/DB/Sam.pm',
     dist_author        => 'Lincoln Stein <lincoln.stein@gmail.com>',
-    dist_abstract      => 'The GMOD Generic Genome Browser',
+    dist_abstract      => 'Perl interface to SamTools library for DNA sequencing',
     license            => 'perl',
     include_dirs       => [$sam_include],
     extra_linker_flags => ["-L$sam_lib",'-lbam','-lz'],
