@@ -19,14 +19,22 @@ Bio::DB::Sam -- Read SAM/BAM database files
                                                  -start  => 500,
                                                  -end    => 800);
  for my $a (@alignments) {
+
+    # where does the alignment start in the reference sequence
     my $seqid  = $a->seq_id;
     my $start  = $a->start;
     my $end    = $a->end;
     my $strand = $a->strand;
     my $cigar  = $a->cigar_str;
     my $paired = $a->get_tag_values('PAIRED');
-    my $ref_dna   = $a->dna;        # reference sequence
-    my $query_dna = $a->query->dna; # query sequence
+
+    # where does the alignment start in the query sequence
+    my $query_start = $a->query->start;     
+    my $query_end   = $a->query->end;
+
+    my $ref_dna   = $a->dna;        # reference sequence bases
+    my $query_dna = $a->query->dna; # query sequence bases
+
     my @scores    = $a->qscore;     # per-base quality scores
     my $match_qual= $a->qual;       # quality of the match
  }
@@ -1545,7 +1553,7 @@ sub features {
     my $self = shift;
 
     my %args;
-    if ($_[0] !~ /^-/) {
+    if (defined $_[0] && $_[0] !~ /^-/) {
 	$args{-type} = \@_;
     } else {
 	%args = @_;
