@@ -1,6 +1,8 @@
 Version 1.10
     * Added a new Bio::DB::Bam method for caching remote files' indices in the
       temp directory. This is used by default by high-level API.
+    * Fixed bug in soft and hard clipping code; query endpoints should be
+      correct now.
 
 Version 1.09
     * Disabled checks for file readability when path is a remote BAM
